--- a/Ejemplo7/Ejemplo7.css
+++ b/Ejemplo7/Ejemplo7.css
@@ -5,11 +5,11 @@
     75% {backgroundcolor:green; left:0px; top:200px;}
     100% {backgroundcolor:red; left:0px; top:0px;}
     }
-    div {
-        animation-name: example;
-        animation-duration: 5s;
-        animation-timing-function: linear;
-        animation-delay: 2s;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
+div {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    background-color: red;
+    animation-name: example;
+    animation-duration: 4s;
 }
